# entrypoint

./: .coveragerc  .gitignore  Dockerfile  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
entrypoint/: __init__.py  args.py  catalog.py  config.py  exceptions.py  utils.py
entrypoint/tests/: test_entrypoint.py
examples/: r.sh  run.sh
examples/envs/service-a/: config
examples/envs/service-b/: config
examples/etcd/: Dockerfile  entrypoint.sh
examples/service/: Dockerfile  conf.json  service.py
