[metadata]
name = python-entrypoint
summary = An entrypoint for containers
description-file =
    README.rst
author = Mirantis Inc.
author-email = ikharin@mirantis.com
home-page = mirantis.com
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    entrypoint

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
