[metadata]
name = python-entrypoint
summary = An entrypoint for containers
description-file =
    README.rst
license = Apache 2.0
platform = any
author = Mirantis Inc.
author-email = ikharin@mirantis.com
home-page = http://github.com/seecloud/entrypoint
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    entrypoint

[entry_points]
console_scripts =
    entrypoint = entrypoint.arguments:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
